apps/oxlint/src/snapshots/fixtures__cli__tsgolint_-c config-type-aware-with-overrides.json no-floating-promises.ts@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: -c config-type-aware-with-overrides.json no-floating-promises.ts
working directory: fixtures/cli/tsgolint
----------

  x typescript(no-floating-promises): Promises must be awaited, add void operator to ignore.
   ,-[no-floating-promises.ts:2:1]
 1 | const promise = new Promise((resolve, _reject) => resolve("value"));
 2 | promise;
   : ^^^|^^^^
   :    `-- This unhandled promise-like value has type `Promise<unknown>`.
 3 | 
   `----
  help: The promise must end with a call to .catch, or end with a call to .then with a rejection handler, or be explicitly marked as ignored with the `void` operator.

  ! eslint(no-unused-expressions): Expected expression to be used
   ,-[no-floating-promises.ts:2:1]
 1 | const promise = new Promise((resolve, _reject) => resolve("value"));
 2 | promise;
   : ^^^^^^^^
 3 | 
   `----
  help: Consider using this expression or removing it

Found 1 warning and 1 error.
Finished in <variable>ms on 1 file with 163 rules using 1 threads.
----------
CLI result: LintFoundErrors
----------
