apps/oxlint/src/snapshots/fixtures__cli__tsgolint_disable_directives_--type-aware --report-unused-disable-directives unused.ts@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --type-aware --report-unused-disable-directives unused.ts
working directory: fixtures/cli/tsgolint_disable_directives
----------

  ! eslint(no-unused-expressions): Expected expression to be used
   ,-[unused.ts:6:1]
 5 | // oxlint-disable-next-line typescript/no-floating-promises
 6 | myPromise
   : ^^^^^^^^^
 7 | 
   `----
  help: Consider using this expression or removing it

  ! Unused oxlint-disable directive (no problems were reported).
    ,-[unused.ts:9:1]
  8 | // This disable directive is UNUSED (no error to suppress)
  9 | // oxlint-disable-next-line typescript/no-floating-promises
    : ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 10 | console.log("hello")
    `----

  ! Unused oxlint-disable directive (no problems were reported).
    ,-[unused.ts:13:1]
 12 | // This disable directive is UNUSED (wrong rule name)
 13 | // oxlint-disable-next-line typescript/no-unsafe-assignment
    : ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 14 | myPromise
    `----

  ! eslint(no-unused-expressions): Expected expression to be used
    ,-[unused.ts:14:1]
 13 | // oxlint-disable-next-line typescript/no-unsafe-assignment
 14 | myPromise
    : ^^^^^^^^^
 15 | 
    `----
  help: Consider using this expression or removing it

  ! typescript(no-floating-promises): Promises must be awaited, add void operator to ignore.
    ,-[unused.ts:14:1]
 13 | // oxlint-disable-next-line typescript/no-unsafe-assignment
 14 | myPromise
    : ^^^^|^^^^^
    :     `-- This unhandled promise-like value has type `Promise<unknown>`.
 15 | 
    `----
  help: The promise must end with a call to .catch, or end with a call to .then with a rejection handler, or be explicitly marked as ignored with the `void` operator.

  ! eslint(no-unused-expressions): Expected expression to be used
    ,-[unused.ts:18:1]
 17 | /* eslint-disable @typescript-eslint/no-floating-promises */
 18 | myPromise
    : ^^^^^^^^^
 19 | /* eslint-enable @typescript-eslint/no-floating-promises */
    `----
  help: Consider using this expression or removing it

  ! eslint(no-unused-vars): Variable 'x' is declared but never used. Unused variables should start with a '_'.
    ,-[unused.ts:23:7]
 22 | /* eslint-disable @typescript-eslint/no-floating-promises */
 23 | const x = 1 + 2
    :       |
    :       `-- 'x' is declared here
 24 | /* eslint-enable @typescript-eslint/no-floating-promises */
    `----
  help: Consider removing this declaration.

  ! Unused eslint-disable directive (no problems were reported).
    ,-[unused.ts:24:1]
 23 | const x = 1 + 2
 24 | /* eslint-enable @typescript-eslint/no-floating-promises */
    : ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 25 | 
    `----

Found 8 warnings and 0 errors.
Finished in <variable>ms on 1 file with 163 rules using 1 threads.
----------
CLI result: LintSucceeded
----------
